[tool.poetry]
name = "reworkd_platform"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.96.0"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
pydantic = { version = "^1.10.8", extras = ["dotenv"] }
yarl = "^1.9.2"
ujson = "^5.7.0"
SQLAlchemy = { version = "^2.0.15", extras = ["asyncio"] }
aiomysql = "^0.1.1"
mysqlclient = "^2.1.1"
httptools = "^0.5.0"
sentry-sdk = "^1.25.0"
loguru = "^0.7.0"
aiokafka = "^0.8.1"
requests = "2.28.0"
langchain = "^0.0.199"
openai = "^0.27.7"
wikipedia = "^1.4.0"
replicate = "^0.8.3"
lanarky = "^0.7.8"
weaviate-client = "^3.19.2"
tiktoken = "^0.4.0"
numpy = "^1.24.3"
vecs = "^0.2.6"
grpcio = "^1.54.2"
pinecone-client = { version = "^2.2.2", extras = ["grpc"] }


[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
pytest = "^7.3.1"
flake8 = "~6.0.0"
mypy = "^1.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
wemake-python-styleguide = "^0.18.0"
black = "^23.3.0"
autoflake = "^2.1.1"
pytest-cov = "^4.1.0"
anyio = "^3.7.0"
pytest-env = "^0.8.1"
taskiq = { version = "^0.6.0", extras = ["reload"] }

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
httpx = "^0.24.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["reworkd_platform", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = "tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "REWORKD_PLATFORM_ENVIRONMENT=pytest",
    "REWORKD_PLATFORM_DB_BASE=reworkd_platform_test",
    "REWORKD_PLATFORM_SENTRY_DSN=",
]

[fastapi-template.options]
project_name = "reworkd_platform"
api_type = "rest"
enable_redis = "None"
enable_rmq = "None"
ci_type = "github"
enable_migrations = "None"
enable_taskiq = "None"
enable_kube = "None"
kube_name = "reworkd-platform"
enable_routers = "None"
enable_kafka = "True"
enable_loguru = "True"
traefik_labels = "None"
add_dummy = "None"
orm = "sqlalchemy"
self_hosted_swagger = "None"
prometheus_enabled = "None"
sentry_enabled = "True"
otlp_enabled = "None"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

