[tool.poetry]
name = "reworkd_platform"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
boto3 = "^1.28.9"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
pydantic = { version = "^1.10.11", extras = ["dotenv"] }
yarl = "^1.9.2"
ujson = "^5.8.0"
sqlalchemy = { version = "^2.0.19", extras = ["mypy", "asyncio"] }
aiomysql = "^0.1.1"
mysqlclient = "^2.2.0"
httptools = "^0.5.0"
sentry-sdk = "^1.28.1"
loguru = "^0.7.0"
aiokafka = "^0.8.1"
requests = "^2.31.0"
langchain = "0.0.236"
openai = "^0.27.8"
wikipedia = "^1.4.0"
replicate = "^0.8.4"
lanarky = "^0.7.12"
weaviate-client = "^3.22.1"
tiktoken = "^0.4.0"
numpy = "^1.25.1"
grpcio = "^1.56.2"
pinecone-client = { version = "^2.2.2", extras = ["grpc"] }
networkx = "^3.1"
pusher = "^3.3.2"
python-multipart = "^0.0.6"
pypdf = "^3.13.0"
llama-index = "^0.7.11.post1"
reportlab = "^4.0.4"
tabula = "^1.0.5"
aws-secretsmanager-caching = "^1.1.1.5"
botocore = "^1.29.153"
stripe = "^5.4.0"
tabula-py = "^2.7.0"
slack-sdk = "^3.21.3"
python-docx = "^0.8.11"
scrapingbee = "^1.2.0"
anthropic = "^0.3.6"
selenium = "^4.11.2"


[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
pytest = "^7.4.0"
flake8 = "~6.0.0"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"
wemake-python-styleguide = "^0.18.0"
black = "^23.7.0"
autoflake = "^2.2.0"
pytest-cov = "^4.1.0"
anyio = "^3.7.1"
pytest-env = "^0.8.2"

[tool.poetry.group.dev.dependencies]
dotmap = "^1.3.30"
pytest-mock = "^3.10.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"
mypy = "^1.4.1"
types-requests = "^2.31.0.1"
types-pytz = "^2023.3.0.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["reworkd_platform", ]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = "tests"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
    "ignore::ImportWarning",
]
env = [
    "REWORKD_PLATFORM_DB_BASE=reworkd_platform_test",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

